--- a/vignettes/DEWSeq.html
+++ b/vignettes/DEWSeq.html
@@ -12,7 +12,7 @@
 
 <meta name="author" content="Thomas Schwarzl and Sudeep Sahadevan" />
 
-<meta name="date" content="2019-09-11" />
+<meta name="date" content="2019-09-13" />
 
 <title>Analyzing eCLIP data with DEWSeq</title>
 
@@ -342,7 +342,7 @@ summary {
 
 <h1 class="title toc-ignore">Analyzing eCLIP data with DEWSeq</h1>
 <h4 class="author">Thomas Schwarzl and Sudeep Sahadevan</h4>
-<h4 class="date">09/11/2019</h4>
+<h4 class="date">09/13/2019</h4>
 <div class="abstract">
 <p class="abstract">Abstract</p>
 Put abstract here
@@ -368,8 +368,8 @@ Put abstract here
 
 <div id="standard-workflow" class="section level1">
 <h1>Standard workflow</h1>
-<p>Other Bioconductor package with a similar aim is <a href="http://bioconductor.org/packages/csaw">csaw</a></p>
-<p>Please get familiar with this Bioconductor package before you are using DEWSeq <a href="http://bioconductor.org/packages/DESeq2">DESea2</a></p>
+<p>Other Bioconductor package with a similar aim is <a href="http://bioconductor.org/packages/csaw">csaw</a> Other Bioconductor package with a similar aim: * <a href="http://bioconductor.org/packages/csaw">csaw</a></p>
+<p>Please get familiar with this Bioconductor package before you are using DEWSeq <a href="http://bioconductor.org/packages/DESeq2">DESea2</a> * <a href="http://bioconductor.org/packages/DESeq2">DESeq2</a></p>
 <div id="eclipiclip-data-preprocessing-steps." class="section level2">
 <h2>eCLIP/iCLIP data preprocessing steps.</h2>
 <div id="from-raw-to-bam-files" class="section level3">
